Not working file

--- a/public-old/index.html
+++ b/public-old/index.html
@@ -70,6 +70,8 @@
       <div class="wrapper">Welcome</div>
     </div>
 
+    <script type="module" src="/src/index.jsx"></script>
+
     <!-- jQuery -->
     <script src="%PUBLIC_URL%/plugins/jquery/jquery.min.js"></script>
     <!-- jQuery UI 1.11.4 -->
